--- a/README.Rmd
+++ b/README.Rmd
@@ -3,6 +3,7 @@ output: github_document
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+<!-- use devtools::build_readme() -->
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
@@ -18,7 +19,10 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of fish4myeloma is to ...
+**Active development 2024, breaking changes possible**     
+
+**fish4myeloma** extracts Myeloma abnormalities from cytogenetic [FISH](https://en.wikipedia.org/wiki/Fluorescence_in_situ_hybridization) (Fluorescence in situ hybridization) data represented in strings according to the [ISCN](https://en.wikipedia.org/wiki/International_System_for_Human_Cytogenomic_Nomenclature) standardised nomenclature.
+
 
 ## Installation
 
@@ -31,25 +35,11 @@ devtools::install_github("andysouth/fish4myeloma")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
-
 ```{r example}
 library(fish4myeloma)
 ## basic example code
+## TODO
+
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
